fix tile color for wind and temperature + manage tooltip on small devices

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -65,6 +65,7 @@ canvas {
         margin: 10px;
         text-align: center;
         background-image: url(parchtile.png);
+        background-size: cover;
         position: relative;
         .severity-loop(5);
         .precipitation-time {
